Fix broken stylesheet in keybinder widget

--- a/QTfrontend/res/css/april1.css
+++ b/QTfrontend/res/css/april1.css
@@ -548,3 +548,6 @@ QProgressBar::chunk {
 background-color: #FF9B00;
 margin: 2px;
 }
+#keyBinderScrollArea {
+background: #130F2A;
+}
