--- a/QTfrontend/res/css/easter.css
+++ b/QTfrontend/res/css/easter.css
@@ -543,3 +543,6 @@ QProgressBar::chunk {
 background-color: #FF9B00;
 margin: 2px;
 }
+#keyBinderScrollArea {
+background: #130F2A;
+}
