--- a/QTfrontend/res/css/qt.css
+++ b/QTfrontend/res/css/qt.css
@@ -539,3 +539,6 @@ QProgressBar::chunk {
 background-color: #FF9B00;
 margin: 2px;
 }
+#keyBinderScrollArea {
+background: #130F2A;
+}
